# hot_list_aggregation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MIGRATION_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_REQUIREMENTS.md  PROJECT_SUMMARY.md  README.md  README_NEW_SYSTEM.md  check_table_structure.py  create_tables.py  database_design.sql  database_design_compatible.sql  database_design_final.sql  fix_foreign_key_issue.sql  main.py  main_combine.py  main_processor.py  pyproject.toml  quick_start.py  requirements.txt  requirements_new.txt  simple_test.py  test_db.py  test_enhanced_news_service.py  数据库表使用说明.md
.claude/: settings.local.json
api/: __init__.py  app.py
config/: __init__.py  settings.py  settings_new.py
database/: __init__.py  base.py  connection.py
docs/: EVENT_COMBINE_USAGE.md  EVENT_MERGE_DESIGN.md  EVENT_MERGE_GUIDE.md  FOREIGN_KEY_FIX_GUIDE.md  README.md  SYSTEM_IMPLEMENTATION_COMPLETE.md  SYSTEM_IMPLEMENTATION_SUMMARY.md  SYSTEM_REFACTOR_SUMMARY.md  SYSTEM_USAGE_GUIDE.md  TABLE_PREFIX_UPDATE_SUMMARY.md  bug_fix_failed_news_stats.md  category_entities_field_fix.md  cleanup_baidu_since_last_fetch.md  custom_mode_usage.md  database_design_with_prefix.sql  database_field_updates_20250929.md  debug_usage.md  dependency_analysis_report.md  duplicate_processing_fix.md  enhancement_summary.md  hot_news_base_ddl.sql  llm_call_logging.md  manual_merge_guide.md  scheduler_workflow.md  sentiment_analysis_feature.md  sentiment_analysis_implementation_summary.md  settings_migration_report.md  task_scheduler_modification.md
models/: __init__.py  enums.py  events.py  events_new.py  events_old.py  hot_aggr_models.py  logs.py  logs_backup.py  news.py  news_new.py  news_old.py
scheduler/: __init__.py  task_scheduler.py  tasks.py
scripts/: create_history_table_simple.py  create_missing_tables.py
services/: __init__.py  ai_service.py  cache_service.py  cache_service_simple.py  event_aggregation_service.py  event_combine_service.py  event_combine_service_old.py  event_service.py  labeling_service.py  llm_wrapper.py  news_service.py  prompt_templates.py
test_scripts/: check_events_table.py  (+42 more)
(+19 files in other folders)
